--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
   <li>
     <a href="#history">Project history</a>
     <ol>
-      <li><a href=#implemented">Implemented.</a></li>
-      <li><a href=#roadmap">Road Map.</a></li>
+      <li><a href="#implemented">Implemented.</a></li>
+      <li><a href="#roadmap">Road Map.</a></li>
     </ol>
   </li>
-  <li><a href="#credits>Credits</a></li>
+  <li><a href="#credits">Credits</a></li>
 </ol>
 
 <a id="introduction" /><h2>Introduction</h2>
