--- a/index.html
+++ b/index.html
@@ -397,7 +397,28 @@ For a more detailed history you can <a href="http://wsussmartapprove.codeplex.co
 <li>Initial Release.</li>
 </ul>
 
-<a id="roadmap"></a><h3>Road Map.</h3>
+<a id="roadmap"></a><h2>Road Map.</h2>
+<ul>
+<li><a href="#v1_0_4">V1.0.4</a></li>
+<li><a href="#v1_1_0">V1.1.0</a></li>
+<li><a href="#v1_2_0">V1.2.0</a></li>
+</ul>
+
+<h3 id="v1_0_4">V1.0.4 (ETA Sep 2014)</h3>
+
+<ul>
+<li>Fixed issue where updates that are "approved for uninstall" are reapproved.</li>
+</ul>
+
+<h3 id="v1_1_0">V1.1.0 (ETA TBC)</h3>
+<ul>
+<li>Ability to specify a minimum age for updates</li>
+</ul>
+
+<h3 id="v1_2_0">V1.2.0 (ETA TBC)</h3>
+<ul>
+<li>TBC</li>
+</ul>
 
 <a id="credits"></a><h2>Credits.</h2>
 <h3>Main Project</h3>
