addition of rsat powershell command to install API

--- a/index.html
+++ b/index.html
@@ -299,6 +299,8 @@ Products match the Product Categories defined in WSUS, the config requires a GUI
 
 <a id="sourcecode"></a><h2>Working with the source code.</h2>
 
+<blockquote>Install-WindowsFeature UpdateServices-API</blockquote>
+
 <a id="documentation"></a><h2>Contributing to the documentation.</h2>
 
 <p>Contributions to the documentation are more than welcome, and the process is designed to be as simple as possible.</p>
